--- a/ETL_Deliverable2_starter_code.ipynb
+++ b/ETL_Deliverable2_starter_code.ipynb
@@ -169,21 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3035320071.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [4]\u001b[1;36m\u001b[0m\n\u001b[1;33m    file_dir =\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 17. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = \n",
+    "file_dir = 'Users/amclaughlin/DataClass/Movies-ETL/ETL_Starter_Code'\n",
     "# The Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia_movies.json'\n",
     "# The Kaggle metadata\n",
@@ -194,9 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'extract_transform_load' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 18. Set the three variables equal to the function created in D1.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m wiki_file, kaggle_file, ratings_file \u001b[38;5;241m=\u001b[39m \u001b[43mextract_transform_load\u001b[49m()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'extract_transform_load' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 18. Set the three variables equal to the function created in D1.\n",
     "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
@@ -204,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,9 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 20. Check that the wiki_movies_df DataFrame looks like this. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mwiki_movies_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhead\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'head'"
+     ]
+    }
+   ],
    "source": [
     "# 20. Check that the wiki_movies_df DataFrame looks like this. \n",
     "wiki_movies_df.head()"
@@ -224,9 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 21. Check that wiki_movies_df DataFrame columns are correct. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mwiki_movies_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241m.\u001b[39mto_list()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'columns'"
+     ]
+    }
+   ],
    "source": [
     "# 21. Check that wiki_movies_df DataFrame columns are correct. \n",
     "wiki_movies_df.columns.to_list()"
