--- a/ETL_Deliverable2_starter_code.ipynb
+++ b/ETL_Deliverable2_starter_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,43 @@
     "# 1. Add the clean movie function that takes in the argument, \"movie\".\n",
     "def clean_movie(movie):\n",
     "    movie = dict(movie) #create a non-destructive copy\n",
+    "    alt_titles = {}\n",
+    "    # combine alternate titles into one list\n",
+    "    for key in ['Also known as','Arabic','Cantonese','Chinese','French',\n",
+    "                'Hangul','Hebrew','Hepburn','Japanese','Literally',\n",
+    "                'Mandarin','McCune-Reischauer','Original title','Polish',\n",
+    "                'Revised Romanization','Romanized','Russian',\n",
+    "                'Simplified','Traditional','Yiddish']:\n",
+    "        if key in movie:\n",
+    "            alt_titles[key] = movie[key]\n",
+    "            movie.pop(key)\n",
+    "    if len(alt_titles) > 0:\n",
+    "        movie['alt_titles'] = alt_titles\n",
+    "\n",
+    "    # merge column names\n",
+    "    def change_column_name(old_name, new_name):\n",
+    "        if old_name in movie:\n",
+    "            movie[new_name] = movie.pop(old_name)\n",
+    "    change_column_name('Adaptation by', 'Writer(s)')\n",
+    "    change_column_name('Country of origin', 'Country')\n",
+    "    change_column_name('Directed by', 'Director')\n",
+    "    change_column_name('Distributed by', 'Distributor')\n",
+    "    change_column_name('Edited by', 'Editor(s)')\n",
+    "    change_column_name('Length', 'Running time')\n",
+    "    change_column_name('Original release', 'Release date')\n",
+    "    change_column_name('Music by', 'Composer(s)')\n",
+    "    change_column_name('Produced by', 'Producer(s)')\n",
+    "    change_column_name('Producer', 'Producer(s)')\n",
+    "    change_column_name('Productioncompanies ', 'Production company(s)')\n",
+    "    change_column_name('Productioncompany ', 'Production company(s)')\n",
+    "    change_column_name('Released', 'Release Date')\n",
+    "    change_column_name('Release Date', 'Release date')\n",
+    "    change_column_name('Screen story by', 'Writer(s)')\n",
+    "    change_column_name('Screenplay by', 'Writer(s)')\n",
+    "    change_column_name('Story by', 'Writer(s)')\n",
+    "    change_column_name('Theme music composer', 'Composer(s)')\n",
+    "    change_column_name('Written by', 'Writer(s)')\n",
+    "\n",
     "    return movie"
    ]
   },
@@ -41,7 +78,7 @@
     "# 2 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def function_name():\n",
+    "def extract_transform_load():\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv('movies_metadata.csv', low_memory=False)\n",
     "    ratings = pd.read_csv('ratings.csv')\n",
@@ -74,22 +111,21 @@
     "    except:\n",
     "        print('there was an error')\n",
     "\n",
-    "    #  7. Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
-    "    [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\n",
-    "\n",
-    "    # 8. Create a variable that will hold the non-null values from the “Box office” column.\n",
-    "    wiki_columns_to_keep = [column for column in clean_movies_df.columns if clean_movies_df[column].isnull().sum() < len(clean_movies_df) * 0.9]\n",
+    "    # 7. Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\n",
+    "    wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\n",
     "    wiki_movies_df = wiki_movies_df[wiki_columns_to_keep]\n",
-    "    \n",
+    "\n",
+    "    # 8. Create a variable that will hold the non-null values from the \"Box office\" column.\n",
+    "    box_office = wiki_movies_df['Box office'].dropna()\n",
     "    # 9. Convert the box office data created in Step 8 to string values using the lambda and join functions.\n",
-    "    box_office[box_office.map(lambda x: type(x) != str)] #Lambda function    \n",
     "    box_office = box_office.apply(lambda x: ' '.join(x) if type(x) == list else x)\n",
-    "    # 10. Write a regular expression to match the six elements of \"form_one\" of the box office data.\n",
-    "    import re\n",
+    "\n",
+    "    #  10. Write a regular expression to match the six elements of \"form_one\" of the box office data.\n",
     "    form_one = r'\\$\\d+\\.?\\d*\\s*[mb]illion'\n",
-    "    box_office.str.contains(form_one, flags=re.IGNORECASE, na=False).sum()   \n",
-    "    # 11. Write a regular expression to match the three elements of \"form_two\" of the box office data.\n",
+    "    #  11. Write a regular expression to match the three elements of \"form_two\" of the box office data.\n",
     "    form_two = r'\\$\\d{1,3}(?:,\\d{3})+'\n",
+    "    \n",
+    "    \n",
     "    box_office.str.contains(form_two, flags=re.IGNORECASE, na=False).sum()\n",
     "\n",
     "    matches_form_one = box_office.str.contains(form_one, flags=re.IGNORECASE, na=False)\n",
@@ -189,14 +225,23 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'extract_transform_load' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7080\n",
+      "7037\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 's' referenced before assignment",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 18. Set the three variables equal to the function created in D1.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m wiki_file, kaggle_file, ratings_file \u001b[38;5;241m=\u001b[39m \u001b[43mextract_transform_load\u001b[49m()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'extract_transform_load' is not defined"
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 18. Set the three variables equal to the function created in D1.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m wiki_file, kaggle_file, ratings_file \u001b[38;5;241m=\u001b[39m \u001b[43mextract_transform_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36mextract_transform_load\u001b[1;34m()\u001b[0m\n\u001b[0;32m     61\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mnan\n\u001b[0;32m     63\u001b[0m \u001b[38;5;66;03m# if input is of the form $###.# million\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m re\u001b[38;5;241m.\u001b[39mmatch(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m$\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms*\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.?\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md*\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms*milli?on\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43ms\u001b[49m, flags\u001b[38;5;241m=\u001b[39mre\u001b[38;5;241m.\u001b[39mIGNORECASE):\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;66;03m# remove dollar sign and \" million\"\u001b[39;00m\n\u001b[0;32m     66\u001b[0m     s \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m$|\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms|[a-zA-Z]\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, s)\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;66;03m# convert to float and multiply by a million\u001b[39;00m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 's' referenced before assignment"
      ]
     }
    ],
@@ -207,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,21 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 20. Check that the wiki_movies_df DataFrame looks like this. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mwiki_movies_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhead\u001b[49m()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'head'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 20. Check that the wiki_movies_df DataFrame looks like this. \n",
     "wiki_movies_df.head()"
@@ -239,21 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'columns'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 21. Check that wiki_movies_df DataFrame columns are correct. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mwiki_movies_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241m.\u001b[39mto_list()\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'columns'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 21. Check that wiki_movies_df DataFrame columns are correct. \n",
     "wiki_movies_df.columns.to_list()"
