--- a/ETL_Deliverable2_starter_code.ipynb
+++ b/ETL_Deliverable2_starter_code.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,32 +138,32 @@
     "            return np.nan\n",
     "\n",
     "    # if input is of the form $###.# million\n",
-    "    if re.match(r'\\$\\s*\\d+\\.?\\d*\\s*milli?on', s, flags=re.IGNORECASE):\n",
+    "        if re.match(r'\\$\\s*\\d+\\.?\\d*\\s*milli?on', s, flags=re.IGNORECASE):\n",
     "        # remove dollar sign and \" million\"\n",
-    "        s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
+    "            s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
     "        # convert to float and multiply by a million\n",
-    "        value = float(s) * 10**6\n",
+    "            value = float(s) * 10**6\n",
     "        # return value\n",
-    "        return value\n",
+    "            return value\n",
     "    # if input is of the form $###.# billion\n",
-    "    elif re.match(r'\\$\\s*\\d+\\.?\\d*\\s*billi?on', s, flags=re.IGNORECASE):\n",
+    "        elif re.match(r'\\$\\s*\\d+\\.?\\d*\\s*billi?on', s, flags=re.IGNORECASE):\n",
     "        # remove dollar sign and \" billion\"\n",
-    "        s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
+    "            s = re.sub('\\$|\\s|[a-zA-Z]','', s)\n",
     "        # convert to float and multiply by a billion\n",
-    "        value = float(s) * 10**9\n",
+    "            value = float(s) * 10**9\n",
     "        # return value\n",
-    "        return value\n",
+    "            return value\n",
     "    # if input is of the form $###,###,###\n",
-    "    elif re.match(r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)', s, flags=re.IGNORECASE):\n",
+    "        elif re.match(r'\\$\\s*\\d{1,3}(?:[,\\.]\\d{3})+(?!\\s[mb]illion)', s, flags=re.IGNORECASE):\n",
     "        # remove dollar sign and commas\n",
-    "        s = re.sub('\\$|,','', s)\n",
+    "            s = re.sub('\\$|,','', s)\n",
     "        # convert to float\n",
-    "        value = float(s)\n",
+    "            value = float(s)\n",
     "        # return value\n",
-    "        return value\n",
+    "            return value\n",
     "    # otherwise, return NaN\n",
-    "    else:\n",
-    "        return np.nan    \n",
+    "        else:\n",
+    "            return np.nan    \n",
     "        \n",
     "    # 13. Clean the box office column in the wiki_movies_df DataFrame.\n",
     "    wiki_movies_df['box_office'] = box_office.str.extract(f'({form_one}|{form_two})', flags=re.IGNORECASE)[0].apply(parse_dollars)\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,15 +233,15 @@
      ]
     },
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 's' referenced before assignment",
+     "ename": "NameError",
+     "evalue": "name 'date_form_one' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 18. Set the three variables equal to the function created in D1.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m wiki_file, kaggle_file, ratings_file \u001b[38;5;241m=\u001b[39m \u001b[43mextract_transform_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36mextract_transform_load\u001b[1;34m()\u001b[0m\n\u001b[0;32m     61\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mnan\n\u001b[0;32m     63\u001b[0m \u001b[38;5;66;03m# if input is of the form $###.# million\u001b[39;00m\n\u001b[1;32m---> 64\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m re\u001b[38;5;241m.\u001b[39mmatch(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m$\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms*\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m.?\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md*\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms*milli?on\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43ms\u001b[49m, flags\u001b[38;5;241m=\u001b[39mre\u001b[38;5;241m.\u001b[39mIGNORECASE):\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;66;03m# remove dollar sign and \" million\"\u001b[39;00m\n\u001b[0;32m     66\u001b[0m     s \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m$|\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms|[a-zA-Z]\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m, s)\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;66;03m# convert to float and multiply by a million\u001b[39;00m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 's' referenced before assignment"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 18. Set the three variables equal to the function created in D1.\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m wiki_file, kaggle_file, ratings_file \u001b[38;5;241m=\u001b[39m \u001b[43mextract_transform_load\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36mextract_transform_load\u001b[1;34m()\u001b[0m\n\u001b[0;32m    100\u001b[0m \u001b[38;5;66;03m# 15. Clean the release date column in the wiki_movies_df DataFrame.\u001b[39;00m\n\u001b[0;32m    101\u001b[0m release_date \u001b[38;5;241m=\u001b[39m wiki_movies_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRelease date\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdropna()\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(x) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(x) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlist\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m x)    \n\u001b[1;32m--> 102\u001b[0m wiki_movies_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrelease_date\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(release_date\u001b[38;5;241m.\u001b[39mstr\u001b[38;5;241m.\u001b[39mextract(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdate_form_one\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m|\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdate_form_two\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m|\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdate_form_three\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m|\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdate_form_four\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m], infer_datetime_format\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m    103\u001b[0m \u001b[38;5;66;03m# 16. Clean the running time column in the wiki_movies_df DataFrame.\u001b[39;00m\n\u001b[0;32m    104\u001b[0m running_time \u001b[38;5;241m=\u001b[39m wiki_movies_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRunning time\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdropna()\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(x) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(x) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlist\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m x)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'date_form_one' is not defined"
      ]
     }
    ],
